--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,19 +6,20 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container center">
-    <div class="auth-box">
+  <div class="app" style="justify-content:center;align-items:center;">
+    <div style="width:360px">
       <h2>Voice AI</h2>
 
       <input id="email" placeholder="Email">
       <input id="password" type="password" placeholder="Password">
 
       <button onclick="login()">Login</button>
-      <button class="secondary" onclick="signup()">Signup</button>
+      <button onclick="signup()">Signup</button>
 
       <p id="msg"></p>
     </div>
   </div>
-<script src="app.js"></script>
+
+  <script src="app.js"></script>
 </body>
 </html>
